# kougami

./: .gitignore  .sublimelinterrc  CMakeLists.txt  README.md
inc/: clang.hpp  kougami.hpp
src/: main.cpp
src/clang/: Cursor.cpp  CursorKind.cpp  File.cpp  Index.cpp  SourceLocation.cpp  SourceRange.cpp  String.cpp  TranslationUnit.cpp  Type.cpp  Visitor.cpp
src/kougami/: Error.cpp  LinterVisitor.cpp
src/kougami/linters/: ArgumentCount.cpp  BreakAfterControl.cpp  DoStatement.cpp  EnumerationName.cpp  ForStatement.cpp  FunctionCount.cpp  FunctionLength.cpp  GlobalVarLocation.cpp  GlobalVarName.cpp  GotoStatement.cpp  IdentifierCase.cpp  MacroCase.cpp  MacroLocation.cpp  NoMultilineMacro.cpp  NoSpaceAfterUnary.cpp  NoStructCopy.cpp  RelativeInclusionDirective.cpp  SpaceAroundBinary.cpp  StructureName.cpp  SwitchStatement.cpp  TypedefLocation.cpp  TypedefName.cpp  TypedefOverStruct.cpp  UnionName.cpp
tests/functional/: header.h  main.c
